monitoria/mac323/5-3-24/grades/Vinicius-Perche-de-Toledo-Agostini_201370_assignsubmission_file_FindAll.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CCCCC...
EP: Vinicius-Perche-de-Toledo-Agostini_201370_assignsubmission_file_FindAll
NOTA: 50
CORREÇÃO AUTOMÁTICA
600 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
5 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Brute_003 ============
./Brute.java:3: error: class KMP is public, should be declared in a file named KMP.java
public class KMP {
       ^
BruteDoVictor.java:9: error: cannot access Brute
            for (int i : Brute.findAll(StdIn.readString(), pat))
                         ^
  bad source file: ./Brute.java
    file does not contain class Brute
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
2 errors
Compilation Error on Brute
======= Brute_004 ============
./Brute.java:3: error: class KMP is public, should be declared in a file named KMP.java
public class KMP {
       ^
BruteDoVictor.java:9: error: cannot access Brute
            for (int i : Brute.findAll(StdIn.readString(), pat))
                         ^
  bad source file: ./Brute.java
    file does not contain class Brute
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
2 errors
Compilation Error on Brute
======= Brute_005 ============
./Brute.java:3: error: class KMP is public, should be declared in a file named KMP.java
public class KMP {
       ^
BruteDoVictor.java:9: error: cannot access Brute
            for (int i : Brute.findAll(StdIn.readString(), pat))
                         ^
  bad source file: ./Brute.java
    file does not contain class Brute
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
2 errors
Compilation Error on Brute
======= KMP_000 ============
Exception in thread "main" java.lang.StringIndexOutOfBoundsException: String index out of range: 45
	at java.lang.String.charAt(String.java:658)
	at KMP.findAll(KMP.java:110)
	at KMPDoVictor.main(KMPDoVictor.java:10)

real	0m0.204s
user	0m0.144s
sys	0m0.016s
partially correct (200) perfeito
======= KMP_001 ============
Exception in thread "main" java.lang.StringIndexOutOfBoundsException: String index out of range: 78
	at java.lang.String.charAt(String.java:658)
	at KMP.findAll(KMP.java:110)
	at KMPDoVictor.main(KMPDoVictor.java:10)

real	0m0.134s
user	0m0.132s
sys	0m0.024s
partially correct (200) perfeito
======= KMP_002 ============
Exception in thread "main" java.lang.StringIndexOutOfBoundsException: String index out of range: 3
	at java.lang.String.charAt(String.java:658)
	at KMP.findAll(KMP.java:110)
	at KMPDoVictor.main(KMPDoVictor.java:10)

real	0m0.134s
user	0m0.124s
sys	0m0.028s
partially correct (200) perfeito
